<resources>
    <string name="app_name">Bhagavad Gita</string>
    <string name="about_bhagavad_gita">ABOUT BHAGAVAD GITA</string>
    <string name="about_gita">The Bhagavad Gita is one of the most prominent Hindu texts, forming a part of the Indian epic known as Mahabharata. Originally written in Sanskrit, the Bhagavad Gita is believed to have been composed between the 5th and 2nd century BCE. It is a guidebook to lead an enjoyable and blissful life. In other words, it is a user’s manual to lead a meaningful human life Lord Krishna imparted this knowledge to Arjuna in the battlefield of Kurukshetra, when the latter was in a distressful condition Upon receiving this knowledge returned to his happy and stable position All of us undergo difficult situations in life and often become overwhelmed by those situations not knowing where to find a solution The Bhagavad-Gita guides us out of such delusions and reestablishes us in our original position of eternity, knowledge and bliss If we follow the instructions as given by Lord Krishna, then we can attain the same blissful state as Arjuna did.</string>
    <string name="gita_relevent">How relevant is it in modern times</string>
    <string name="gita_relevent_full">The Bhagavad-gita is manual given by the Supreme Lord Krishna which guides us in making the best use of this human life and to deriving real happiness from it. In the modern times when people are more confused and misdirected, the Gita become all the more relevant for the individual as well as the society at large in bringing back the stability and happiness in life.</string>
    <string name="about_gita_menu">About Gita</string>
    <string name="next_chapter">Next Chapter</string>
    <string name="hanuman_chalisa">Hanuman Chalisa</string>
    <string name="hanuman_chalisa_e">॥Doha॥ \n\nShri Guru Charan Saroj Raj \nNij mane mukure sudhar \nVarnao Raghuvar Vimal Jasu \nJo dayaku phal char \n\nBudhi Hin Tanu Janike \nSumirau Pavan Kumar \nBal budhi Vidya dehu mohe \nHarahu Kalesa Vikar \n\n॥Chaupai॥ \n\nJai Hanuman gyan gun sagar \nJai Kapis tihun lok ujagar \n\nRam doot atulit bal dhama \nAnjani-putra Pavan sut nama \n\nMahavir Vikram Bajrangi \nKumati nivar sumati Ke sangi \n\nKanchan varan viraj subesa \nKanan Kundal Kunchit Kesa \n\nHath Vajra Aur Dhuvaje Viraje \nKandhe moonj janehu sajai \n\nSankar suvan kesri Nandan \nTej pratap maha jag vandan \n\nVidyavan guni ati chatur \n Ram kaj karibe ko aatur \n\n Prabu charitra sunibe ko rasiya\n Ram Lakhan Sita man Basiya\n\n Sukshma roop dhari Siyahi dikhava\n Vikat roop dhari lanka jarava\n\n Bhima roop dhari asur sanghare\n Ramachandra ke kaj sanvare\n\n Laye Sanjivan Lakhan Jiyaye\n Shri Raghuvir Harashi ur laye\n\n Raghupati Kinhi bahut badai\n Tum mam priye Bharat-hi sam bhai\n\n Sahas badan tumharo yash gaave\n Us kahi Shripati kanth lagaave\n\n Sankadik Brahmadi Muneesa\n Narad Sarad sahit Aheesa\n\n Yam Kuber Digpal Jahan te\n Kavi kovid kahi sake kahan te\n\n Tum upkar Sugreevahin keenha\n Ram milaye rajpad deenha\n\n Tumharo mantra Vibheeshan mana\n Lankeshwar Bhaye Sub jag jana\n\n Yug sahastra jojan par Bhanu\n Leelyo tahi madhur phal janu\n\n Prabhu mudrika meli mukh mahee\n Jaladhi langhi gaye achraj nahee\n\n Durgaam kaj jagat ke jete\n Sugam anugraha tumhre tete\n\n Ram dware tum rakhvare,\n Hoat na agya binu paisare\n\n Sub sukh lahai tumhari sarna\n Tum rakshak kahu ko dar na\n\n Aapan tej samharo aapai\n Teenhon lok hank te kanpai\n\n Bhoot pisach Nikat nahin aavai\n Mahavir jab naam sunavai\n\n Nase rog harai sab peera\n Japat nirantar Hanumant beera\n\n Sankat se Hanuman chudavai\n Man Karam Vachan dyan jo lavai\n\n Sub par Ram tapasvee raja\n Tin ke kaj sakal Tum saja\n\n Aur manorath jo koi lavai\n Sohi amit jeevan phal pavai\n\n Charon Yug partap tumhara\n Hai persidh jagat ujiyara\n\n Sadhu Sant ke tum Rakhware\n Asur nikandan Ram dulhare\n\n Ashta sidhi nav nidhi ke dhata\n Us var deen Janki mata\n\n Ram rasayan tumhare pasa\n Sada raho Raghupati ke dasa\n Tumhare bhajan Ram ko pavai\n Janam janam ke dukh bisravai\n\n Anth kaal Raghuvir pur jayee\n Jahan janam Hari-Bakht Kahayee\n\n Aur Devta Chit na dharehi\n Hanumanth se hi sarve sukh karehi\n\n Sankat kate mite sab peera\n Jo sumirai Hanumat Balbeera\n\n Jai Jai Jai Hanuman Gosahin\n Kripa Karahu Gurudev ki nyahi\n\n Jo sat bar path kare kohi\n Chutehi bandhi maha sukh hohi\n\n Jo yah padhe Hanuman Chalisa\n Hoye siddhi sakhi Gaureesa\n\n Tulsidas sada hari chera\n Keejai Das Hrdaye mein dera\n\n ॥Doha॥\n\n Pavantnai sankar haran,\n Mangal murti roop.\n Ram Lakhan Sita sahit,\n Hrdaye basahu sur bhoop.</string>
    <string name="hanuman_chalisa_h">॥दोहा॥\n\n श्रीगुरु चरन सरोज रज निज मनु मुकुरु सुधारि ।\n बरनउँ रघुवर बिमल जसु जो दायकु फल चारि ॥\n बुद्धिहीन तनु जानिके सुमिरौं पवन-कुमार ।\n बल बुधि विद्या देहु मोहिं हरहु कलेस विकार ॥\n\n ॥चौपाई॥\n\n जय हनुमान ज्ञान गुन सागर ।\n जय कपीस तिहुँ लोक उजागर ॥१॥\n\n राम दूत अतुलित बल धामा ।\n अंजनी-पुत्र पवनसुत नामा ॥२॥\n\n महावीर विक्रम बजरंगी ।\n कुमति निवार सुमति के सङ्गी ॥३॥\n\n कंचन वरन विराज सुवेसा ।\n कानन कुण्डल कुंचित केसा ॥४॥\n\n हाथ वज्र औ ध्वजा विराजे ।\n काँधे मूँज जनेउ साजै ॥५॥\n\n शंकर सुवन केसरीनन्दन ।\n तेज प्रताप महा जग बंधन ॥६॥\n\n विद्यावान गुनी अति चातुर ।\n राम काज करिबे को आतुर ॥७॥\n\n प्रभु चरित्र सुनिबे को रसिया ।\n राम लखन सीता मन बसिया ॥८॥\n\n सूक्ष्म रूप धरि सियहिं दिखावा ।\n विकत रूप धरि लंक जरावा ॥९॥\n\n भीम रूप धरि असुर सँहारे ।\n रामचन्द्र के काज सँवारे ॥१०॥\n\n लाय संजीवन लखन जियाये ।\n श्रीरघुवीर हरषि उर लाये ॥११॥\n\n रघुपति कीन्ही बहुत बड़ाई ।\n तुम मम प्रिय भरतहि सम भाई ॥१२॥\n\n सहस बदन तुह्मारो जस गावैं ।\n अस कहि श्रीपति कण्ठ लगावैं ॥१३॥\n\n सनकादिक ब्रह्मादि मुनीसा ।\n नारद सारद सहित अहीसा ॥१४॥\n\n यम कुबेर दिगपाल जहाँ ते ।\n कवि कोविद कहि सके कहाँ ते ॥१५॥\n\n तुम उपकार सुग्रीवहिं कीन्हा ।\n राम मिलाय राज पद दीह्ना ॥१६॥\n\n तुम्हारो मन्त्र विभीषण माना ।\n लंकेश्वर भए सब जग जाना ॥१७॥\n\n जुग सहस्र जोजन पर भानु ।\n लील्यो ताहि मधुर फल जानू ॥१८॥\n\n प्रभु मुद्रिका मेलि मुख माहीं ।\n जलधि लाँघि गये अचरज नाहीं ॥१९॥\n\n दुर्गम काज जगत के जेते ।\n सुगम अनुग्रह तुम्हारे तेते ॥२०॥\n\n राम दुआरे तुम रखवारे ।\n होत न आज्ञा बिनु पैसारे ॥२१॥\n\n सब सुख लहै तुम्हारी सरना ।\n तुम रक्षक काहू को डर ना ॥२२॥\n\n आपन तेज सम्हारो आपै ।\n तीनों लोक हाँक तें काँपै ॥२३॥\n\n भूत पिशाच निकट नहिं आवै ।\n महावीर जब नाम सुनावै ॥२४॥\n\n नासै रोग हरै सब पीड़ा ।\n जपत निरन्तर हनुमत बीरा ॥२५॥\n\n संकट तें हनुमान छुड़ावै ।\n मन क्रम वचन ध्यान जो लावै ॥२६॥\n\n सब पर राम तपस्वी राजा ।\n तिन के काज सकल तुम साजा ॥२७॥\n\n और मनोरथ जो कोई लावै ।\n सोई अमित जीवन फल पावै ॥२८॥\n\n चारों जुग परताप तुम्हारा ।\n है परसिद्ध जगत उजियारा ॥२९॥\n\n साधु सन्त के तुम रखवारे ।\n असुर निकन्दन राम दुलारे ॥३०॥\n\n अष्टसिद्धि नौ निधि के दाता ।\n अस वर दीन जानकी माता ॥३१॥\n\n राम रसायन तुम्हारे पासा ।\n सदा रहो रघुपति के दासा ॥३२॥\n\n तुम्हारे भजन राम को पावै ।\n जनम जनम के दुख बिसरावै ॥३३॥\n\n अन्त काल रघुवर पुर जाई ।\n जहाँ जन्म हरिभक्त कहाई ॥३४॥\n\n और देवता चित्त न धरई ।\n हनुमत सेइ सर्व सुख करई ॥३५॥\n\n संकट कटै मिटै सब पीड़ा ।\n जो सुमिरै हनुमत बलबीरा ॥३६॥\n\n जय जय जय हनुमान गोसाईं ।\n कृपा करहु गुरुदेव की नाईं ॥३७॥\n\n जो शत बार पाठ कर कोई ।\n छूटहि बन्दि महा सुख होई ॥३८॥\n\n जो यह पढ़ै हनुमान चालीसा ।\n होय सिद्धि साखी गौरीसा ॥३९॥\n\n तुलसीदास सदा हरि चेरा ।\n कीजै नाथ हृदय महँ डेरा ॥४०॥\n\n ॥दोहा॥\n\n पवनतनय संकट हरन\n मंगल मूरति रूप ।\n राम लखन सीता सहित\n हृदय बसहु सुर भूप ॥</string>
    <string name="play">PLAY</string>
    <string name="tab">Tab</string>
    <string name="chapter">Chapter</string>
    <string name="change_text_size_description">Change text size</string>
    <string name="share">Share</string>
    <string name="github_icon">GitHub Icon</string>
    <string name="share_icon">Share Icon</string>
    <string name="version">Version</string>
    <string name="verse_title">Verse Title</string>
    <string name="verse_content">Verse Content</string>
    <string name="no_favorites">No Favourites</string>
    <string name="search_hint">Search chapters, verses...</string>
    <string name="play_chapter_audio">Play chapter audio</string>
    <string name="previous_verse">Previous Verse</string>
    <string name="next_verse">Next Verse</string>
    <string name="add_to_favorite">Add to Favorite</string>
    <string name="copy">Copy</string>
    <string name="select_audio_source">Audio Source</string>
    <string name="select_author">Translation Author</string>
    <string name="select_commentary_author">Commentary Language</string>
    <string name="ramcharitmanas_title">Ramayana</string>
    <string name="favorite_verse_title">Favorite Verse</string>
    <string name="about_gita_card_title">About Gita</string>
    <string name="ramcharitmanas">Ramayana</string>
    <string name="continue_where_you_left_off">Continue where you left off?</string>
    <string name="scroll">Scroll</string>
    <string name="customize_view">Customize View</string>
    <string name="customize_view_dialog_title">Customize Text Visibility</string>
    <string name="show_kanda_title">Show Kanda/Sarga/Shloka Number</string>
    <string name="show_shloka_text_title">Show Shloka Text</string>
    <string name="show_translation_title">Show Translation</string>
    <string name="show_explanation_title">Show Explanation</string>
    <string name="apply">Apply</string>
    <string name="cancel">Cancel</string>
    <string name="no_translation_available">No translation available.</string>
    <string name="add_edit_note_for">Add/Edit Note for %1$s</string>
    <string name="save">Save</string>
    <string name="added_to_favorites">Added to Favorites</string>
    <string name="failed_to_add_to_favorites">Failed to add to Favorites</string>
    <string name="removed_from_favorites">Removed from Favorites</string>
    <string name="failed_to_remove_from_favorites">Failed to remove from Favorites</string>
    <string name="verse_data_not_available">Verse data not available.</string>
    <string name="marked_as_unread">Marked as Unread</string>
    <string name="marked_as_read">Marked as Read</string>
    <string name="you_have_reached_the_last_verse_of_this_chapter">You have reached the last verse of this chapter</string>
    <string name="you_have_reached_the_first_verse_of_this_chapter">You have reached the first verse of this chapter</string>
    <string name="no_more_chapters_available">No more chapters available.</string>
    <string name="unable_to_play_the_audio_please_check_your_internet_connection">Unable to play the audio. Please check your internet connection.</string>
    <string name="favourite">Favourite</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="no_ramayana_data_available">No Ramayana data available.</string>
    <string name="navigate_to_verse">Navigate to verse</string>
    <string name="continue_from_verse">Continue from Verse %1$d?</string>
    <string name="continue_">CONTINUE</string>
    <string name="please_select_kanda_sarga_and_shloka">Please select Kanda, Sarga, and Shloka.</string>
    <string name="navigate_to">Navigate To</string>
    <string name="go">Go</string>
    <string name="completed">Completed</string>
    <string-array name="theme_entries">
        <item>System Default</item>
        <item>Light</item>
        <item>Dark</item>
        <item>Black</item>
    </string-array>
    <string-array name="theme_values">
        <item>system</item>
        <item>light</item>
        <item>dark</item>
        <item>black</item>
    </string-array>
</resources>