<!--
  ~  This file is part of BhagavadGitaApp. @WirelessAlien
  ~
  ~  BhagavadGitaApp is free software: you can redistribute it and/or modify
  ~  it under the terms of the GNU General Public License as published by
  ~  the Free Software Foundation, either version 3 of the License, or
  ~  (at your option) any later version.
  ~
  ~  BhagavadGitaApp is distributed in the hope that it will be useful,
  ~  but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  ~  GNU General Public License for more details.
  ~
  ~   You should have received a copy of the GNU General Public License
  ~   along with BhagavadGitaApp. If not, see <https://www.gnu.org/licenses/>.
  ~
  ~
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/nav_about_gita"
        android:title="@string/about_gita_menu"
        android:icon="@drawable/om_icon"/>
    <item
        android:id="@+id/nav_hanuman_chalisa"
        android:title="@string/hanuman_chalisa"
        android:icon="@drawable/om_icon"/>
    <item
        android:id="@+id/nav_fav"
        android:title="@string/favourite"
        android:icon="@drawable/ic_star_2"
        app:showAsAction="collapseActionView"/>
    <item
        android:id="@+id/nav_theme"
        android:title="@string/settings"
        android:icon="@drawable/ic_settings"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/nav_about"
        android:title="@string/about"
        android:icon="@drawable/ic_info"
        app:showAsAction="collapseActionView"/>
</menu>
