<?xml version="1.0" encoding="utf-8"?><!--
  ~ This file is part of BhagavadGitaApp <https://github.com/WirelessAlien/BhagavadGitaApp>
  ~ Copyright (C) 2023  WirelessAlien <https://github.com/WirelessAlien>
  ~
  ~ BhagavadGitaApp is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ BhagavadGitaApp is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_previous_verse"
        android:title="@string/previous_verse"
        android:icon="@drawable/ic_arrow_back"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_next_verse"
        android:title="@string/next_verse"
        android:icon="@drawable/ic_arrow_forward"
        app:showAsAction="ifRoom" />

    <!-- Mark as read will be a FAB, so it's not in the menu -->

    <item
        android:id="@+id/action_favorite"
        android:title="@string/add_to_favorite"
        android:icon="@drawable/ic_favorite_line"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_copy"
        android:title="@string/copy"
        android:icon="@drawable/ic_copy"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_share"
        android:title="@string/share"
        android:icon="@drawable/ic_share"
        app:showAsAction="ifRoom" />
</menu>
