<?xml version="1.0" encoding="utf-8"?>
<!--
  ~  This file is part of BhagavadGitaApp. @WirelessAlien
  ~
  ~  BhagavadGitaApp is free software: you can redistribute it and/or modify
  ~  it under the terms of the GNU General Public License as published by
  ~  the Free Software Foundation, either version 3 of the License, or
  ~  (at your option) any later version.
  ~
  ~  BhagavadGitaApp is distributed in the hope that it will be useful,
  ~  but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  ~  GNU General Public License for more details.
  ~
  ~   You should have received a copy of the GNU General Public License
  ~   along with BhagavadGitaApp. If not, see <https://www.gnu.org/licenses/>.
  ~
  ~
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center">

    <ImageView
        android:id="@+id/appIcon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_launcher_foreground"
        android:contentDescription="@string/app_name"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/version"
            android:textSize="18sp"
            android:gravity="center"/>
        <TextView
            android:id="@+id/versionNumberText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/version"
            android:layout_marginStart="2dp"
            android:text="Version 3.1"
            android:textSize="18sp"
            android:gravity="center"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/githubIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?attr/materialIconButtonStyle"
            app:icon="@drawable/ic_github"
            android:layout_alignParentStart="true"
            android:contentDescription="@string/github_icon" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/githubIssueButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_bug_report"
            android:layout_toEndOf="@id/githubIcon"
            style="?attr/materialIconButtonStyle" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/licenseText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?attr/materialIconButtonStyle"
            android:layout_toEndOf="@id/githubIssueButton"
            app:icon="@drawable/ic_copyright"
            android:textSize="16sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/shareIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?attr/materialIconButtonStyle"
            app:icon="@drawable/ic_share"
            android:layout_toEndOf="@id/licenseText"
            android:contentDescription="@string/share_icon" />
    </RelativeLayout>
</LinearLayout>
